# geo_programing

./: .gitignore  Makefile  README.md  pyproject.toml  都市個性を生むプランニングのあり方について.txt  都市計画史.txt
data/: 横須賀_人口推測.xlsx
geo_algorithm/: README.md  calc_and_visualize_terrain.py  calc_housing_terrain.py  calc_terrain.py  calc_terrain_283cities.py  calc_terrain_status.py  create_terrain_graph.py  dbscan.py  dbscan2.py  elv_opt.py  extract_housing_area.py  flood_plot.py  paint_world.py  plot_data.py  population_plot.py  railways_plot.py
